versiion 2.0 del proyecto
se agrego sass, seo y animaciones

--- a/horarios.html
+++ b/horarios.html
@@ -5,6 +5,11 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="img/sol.ico">
         <title>EL PORVENIR - EXPRESO VDR</title>
+        <meta name="descrption" content="Esta pagina web pertenece a la empresa de trasnmporte interurbano El porvenir, siendo un servicio publico, conectando la ciudad de Cordoba con la Ciudad de El Fortin, abarcando gran partte de la RN9 y toda la RP13, teniendo como sedes las localidades de Villa del Rosario y Las varillas.">
+        <meta name="keywords" content="TRASNPORTE INTERURBANO, COLECTIVO, VILLA DEL ROSARIO, CORDOBA, LUQUE, SERVICIO COMUN, SERVICIO PUBLICO, LAS VARILLAS, ALICIA, FORTIN, COSTASACATE, RIO SEGUNDO, PILAR, BOLETO EDUCATIVO GRATUITO">
+        <meta property="og:title" content="El Porvenir - Exp VDR">
+        <meta property="og:description" content="Servicio de transporte publico interurbano">
+        <meta property="og:url" content="https://elporvenirweb.com/">
     </head>
 <body>
     <div class="container">
@@ -47,13 +52,19 @@
                 <p>Se puede conseguir completando el formulario en la pagina de <a href="https://cidi.cba.gov.ar/portal-publico/">Ciudadano Digital</a></p>
             </div>
 
-        <div class="footer">
-            <h3>Suscribite a nuestro newsletter para recibir novedades diariamente</h3>
-            <form>
-                <input type="text" placeholder="Escribe tu nombre">
-                <input type="text" placeholder="Escribe tu email">
-                <input type="submit">
-            </form>
+            <div class="footer">
+                <h3>Contactate con nosotros mediante nuestras redes:</h3>
+                <div class="iconos">
+                    <a href="https://wa.me/5493518146611">
+                        <img src="img/wsp.png" alt="img whastapp">
+                    </a>
+                    <a href="https://www.instagram.com/clubelporveniroficial/">
+                        <img src="img/instagram.png" alt="img instagram">
+                    </a>
+                    <a href="https://micronauta.dnsalias.net/usuario/index.php?a=diego">
+                        <img src="img/carrito.png" alt="img shop">
+                    </a>
+                </div>
         </div>
     </div>
 </body>
