--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/sol.ico">
     <title>EL PORVENIR - EXPRESO VDR</title>
+    <meta name="description" content="Esta pagina web pertenece a la empresa de transporte interurbano El porvenir, siendo un servicio publico, conectando la ciudad de Cordoba con la Ciudad de El Fortin, abarcando gran partte de la RN9 y toda la RP13, teniendo como sedes las localidades de Villa del Rosario y Las varillas.">
+    <meta name="keywords" content="TRANSPORTE INTERURBANO, COLECTIVO, VILLA DEL ROSARIO, CORDOBA, LUQUE, SERVICIO COMUN, SERVICIO PUBLICO, LAS VARILLAS, ALICIA, FORTIN, COSTASACATE, RIO SEGUNDO, PILAR, BOLETO EDUCATIVO GRATUITO">
+    <meta property="og:title" content="El Porvenir - Exp VDR">
+    <meta property="og:description" content="Servicio de transporte publico interurbano">
+    <meta property="og:url" content="https://elporvenirweb.com/">
 </head>
 <body>
     <div class="container">
@@ -25,8 +30,8 @@
                 <h2>¿Quienes Somos?</h2>
                 <img src="img/colectivo.jpg" alt="imagen de colectivo">
                 <p>Somos una empresa de transporte interurbano dentro de la Provincia de Cordoba, teniendo como ruta principal la RP13, con localidades como Villa del Rosario y Las Varillas como sede, buscando conectar a los habitantes de las mismas con la Ciudad de Cordoba para que puedan tener acceso a la educacion y puestos de trabajo que la misma ofrece. 
-                    <br>Contamos con una vasta flota de colectivos, todos con Aire Acondicionado y calefaccion y un tipo de servicio comun Semicama.
-                    <br>Disponemos de 2(dos) lineas de recorrido siendo estas Cordoba - El Fortin y Cordoba - Villa Maria, este ultimo recorrido efectuandose por la RP10.</p>
+                    Contamos con una vasta flota de colectivos, todos con Aire Acondicionado y calefaccion y un tipo de servicio comun Semicama.
+                    Disponemos de 2(dos) lineas de recorrido siendo estas Cordoba - El Fortin y Cordoba - Villa Maria, este ultimo recorrido efectuandose por la RP10.</p>
             </div>
 
             <div class="c2">
@@ -41,12 +46,18 @@
             </div>
 
         <div class="footer">
-            <h3>Suscribite a nuestro newsletter para recibir novedades diariamente</h3>
-            <form>
-                <input type="text" placeholder="Escribe tu nombre">
-                <input type="text" placeholder="Escribe tu email">
-                <input type="submit">
-            </form>
+            <h3>Contactate con nosotros mediante nuestras redes:</h3>
+            <div class="iconos">
+                <a href="https://wa.me/5493518146611">
+                    <img src="img/wsp.png" alt="img whastapp">
+                </a>
+                <a href="https://www.instagram.com/clubelporveniroficial/">
+                    <img src="img/instagram.png" alt="img instagram">
+                </a>
+                <a href="https://micronauta.dnsalias.net/usuario/index.php?a=diego">
+                    <img src="img/carrito.png" alt="img shop">
+                </a>
+            </div>
         </div>
     </div>
     
