--- a/horarios.html
+++ b/horarios.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="img/sol.ico">
         <title>EL PORVENIR - EXPRESO VDR</title>
-        <meta name="descrption" content="Esta pagina web pertenece a la empresa de trasnmporte interurbano El porvenir, siendo un servicio publico, conectando la ciudad de Cordoba con la Ciudad de El Fortin, abarcando gran partte de la RN9 y toda la RP13, teniendo como sedes las localidades de Villa del Rosario y Las varillas.">
+        <meta name="descrption" content="Esta pagina web es para ver los horarios y tarjetas y promociones disponibles en la empresa.">
         <meta name="keywords" content="TRASNPORTE INTERURBANO, COLECTIVO, VILLA DEL ROSARIO, CORDOBA, LUQUE, SERVICIO COMUN, SERVICIO PUBLICO, LAS VARILLAS, ALICIA, FORTIN, COSTASACATE, RIO SEGUNDO, PILAR, BOLETO EDUCATIVO GRATUITO">
         <meta property="og:title" content="El Porvenir - Exp VDR">
         <meta property="og:description" content="Servicio de transporte publico interurbano">
@@ -21,8 +21,6 @@
         <nav>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="#">Promociones Disponibles</a></li>
-                <li><a href="#">Dejanos tu CV</a></li>
             </ul>
         </nav>
 
